syntax = "proto3";

package user;

message User {
  string id = 1;
  string email = 2;
  string name = 3;
  int32 YOB = 4;
}

message CreateUserRequest {
  string email = 1;
  string name = 2;
  string password = 3;
  int32 YOB = 4;
}

message UpdateUserRequest {
  string id = 1;
  string email = 2;
  string name = 3;
  string password = 4;
  int32 YOB = 5;
}

message GetUserRequest {
  string id = 1;
}

message CreateUserResponse {
  bool success = 1;
  string message = 2;
  User data = 3;
}

message UpdateUserResponse {
  bool success = 1;
  string message = 2;
  User data = 3;
}

message UserDetailResponse {
  bool success = 1;
  string message = 2;
  User data = 3;
}

message UsersResponse {
  bool success = 1;
  string message = 2;
  repeated User data = 3; 
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (UserDetailResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc GetAllUsers(Empty) returns (UsersResponse);
}

message Empty {}
